/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package org.apache.flink.formats.protobuf.proto;
option java_package = "org.apache.flink.formats.protobuf.testproto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message MCardView {
  .google.protobuf.Int64Value position = 1;
  .google.protobuf.StringValue user_id = 2;
  .google.protobuf.StringValue dd_district_id = 3;
  .google.protobuf.Int64Value item_price = 4;
  .google.protobuf.StringValue store_status = 5;
  .google.protobuf.Timestamp uuid_ts = 6;
  .google.protobuf.StringValue autocomplete_name = 7;
  .google.protobuf.StringValue dd_login_id = 8;
  .google.protobuf.StringValue dd_submarket_id = 9;
  .google.protobuf.Int64Value reorder_subtotal = 10;
  .google.protobuf.StringValue search_term = 11;
  .google.protobuf.StringValue tab = 12;
  .google.protobuf.Int64Value cuisine_id = 13;
  .google.protobuf.StringValue cuisine_name = 14;
  .google.protobuf.StringValue dd_ios_idfv_id = 15;
  .google.protobuf.StringValue dd_zip_code = 16;
  .google.protobuf.StringValue request_store_id = 17;
  .google.protobuf.StringValue container = 18;
  .google.protobuf.StringValue dd_android_advertising_id = 19;
  .google.protobuf.Int64Value quoted_delivery_time = 20;
  .google.protobuf.StringValue dd_device_id = 21;
  .google.protobuf.StringValue event_text = 22;
  .google.protobuf.StringValue order_cart_id = 23;
  .google.protobuf.StringValue autocomplete_type = 24;
  .google.protobuf.StringValue primary_photo_url = 25;
  .google.protobuf.StringValue store_name = 26;
  .google.protobuf.StringValue carousel_name = 27;
  .google.protobuf.StringValue dd_session_id = 28;
  .google.protobuf.Int64Value delivery_fee = 29;
  .google.protobuf.StringValue dd_platform = 30;
  .google.protobuf.StringValue channel = 31;
  .google.protobuf.StringValue dd_android_id = 32;
  .google.protobuf.StringValue request_store_name = 34;
  .google.protobuf.Int64Value item_id = 35;
  .google.protobuf.StringValue page = 36;
  .google.protobuf.Int64Value reorder_num_items = 37;
  .google.protobuf.DoubleValue star_rating = 38;
  .google.protobuf.StringValue star_rating_override = 39;
  .google.protobuf.StringValue status = 40;
  .google.protobuf.Int64Value asap_time = 41;
  .google.protobuf.Int64Value dd_user_id = 42;
  .google.protobuf.StringValue delivery_fee_override = 43;
  .google.protobuf.StringValue dd_ios_idfa_id = 44;
  .google.protobuf.BoolValue has_logo = 45;
  .google.protobuf.Int64Value num_items = 46;
  .google.protobuf.Int64Value store_id = 47;
  .google.protobuf.BoolValue has_photo = 48;
  .google.protobuf.Int64Value card_position = 49;
  .google.protobuf.BoolValue has_callout = 50;
  .google.protobuf.StringValue num_star_ratings = 51;
  .google.protobuf.BoolValue has_large_item_photos = 52;
  .google.protobuf.BoolValue has_small_item_photos = 53;
  .google.protobuf.StringValue callout_name = 54;
  .google.protobuf.Int64Value number_item_photos = 55;
  .google.protobuf.StringValue container_name = 56;
  .google.protobuf.Int64Value global_vertical_position = 57;
  .google.protobuf.StringValue cluster_id = 58;
  .google.protobuf.StringValue container_description = 59;
  .google.protobuf.StringValue query = 60;
  .google.protobuf.StringValue container_id = 61;
  .google.protobuf.BoolValue shows_dashpass_badging = 62;
  .google.protobuf.StringValue reorder_store_order_cart_id = 63;
  .google.protobuf.StringValue store_stctus = 64;
  .google.protobuf.Int64Value aard_position = 65;
  .google.protobuf.StringValue dd_ios_idfa_kd = 66;
  .google.protobuf.StringValue dd_district_if = 67;
  .google.protobuf.StringValue segment_dedupe_id = 68;
  .google.protobuf.StringValue filter_name = 69;
  .google.protobuf.Int64Value asap_pickup_time = 70;
  .google.protobuf.StringValue offer_id = 71;
  .google.protobuf.StringValue card_type = 72;
  .google.protobuf.StringValue list_filter = 73;
  .google.protobuf.StringValue tracker_data_key1 = 74;
  .google.protobuf.StringValue tracker_data_key2 = 75;
  .google.protobuf.BoolValue show_store_logo = 76;
  .google.protobuf.StringValue context = 77;
  .google.protobuf.StringValue e_p_ce_id_set_next_re = 78;
  .google.protobuf.StringValue first_photo_id = 79;
  .google.protobuf.BoolValue show_dashpass_badging = 80;
  .google.protobuf.Int64Value number_items_photos = 81;
  .google.protobuf.Int64Value item_photo_position = 82;
  .google.protobuf.StringValue doordash_canary_always = 83;
  .google.protobuf.DoubleValue store_average_rating = 84;
  .google.protobuf.Int64Value store_price_range = 85;
  .google.protobuf.StringValue store_display_next_hours = 86;
  .google.protobuf.StringValue store_description = 87;
  .google.protobuf.Int64Value store_number_of_ratings = 88;
  .google.protobuf.StringValue store_display_delivery_fee = 89;
  .google.protobuf.BoolValue store_is_dashpass_partner = 90;
  .google.protobuf.StringValue store_type = 91;
  .google.protobuf.StringValue store_display_asap_time = 92;
  .google.protobuf.StringValue pickup_mode = 93;
  .google.protobuf.StringValue num_star_rating = 94;
  .google.protobuf.StringValue delivery_fee_str = 95;
  .google.protobuf.StringValue asap_time_str = 96;
  .google.protobuf.Int64Value sponsored_position = 97;
  .google.protobuf.StringValue experiment_value = 98;
  .google.protobuf.StringValue experiment_name = 99;
  .google.protobuf.Int64Value original_position = 100;
  .google.protobuf.StringValue price = 101;
  .google.protobuf.StringValue name = 102;
  .google.protobuf.StringValue cart_id = 103;
  .google.protobuf.Int64Value index = 104;
  .google.protobuf.StringValue menu_id = 105;
  .google.protobuf.StringValue item_name = 106;
  .google.protobuf.StringValue sponsored_label = 107;
  .google.protobuf.StringValue deal_id = 108;
  .google.protobuf.StringValue campaign_id = 109;
  .google.protobuf.StringValue device_id = 110;
  .google.protobuf.StringValue event_name = 111;
  .google.protobuf.StringValue result = 112;
  .google.protobuf.StringValue event_date = 113;
  .google.protobuf.StringValue target_app = 114;
  .google.protobuf.StringValue sponsored_type = 115;
  .google.protobuf.StringValue district_id = 116;
  .google.protobuf.StringValue category_id = 117;
  .google.protobuf.StringValue consumer_id = 118;
  .google.protobuf.StringValue menu_name = 119;
  .google.protobuf.Int64Value menu_count = 120;
  .google.protobuf.StringValue tile_name = 121;
  .google.protobuf.StringValue tile_id = 122;
  .google.protobuf.StringValue badges = 123;
  .google.protobuf.BoolValue should_show_sponsored_callout = 124;
  .google.protobuf.StringValue display_delivery_fee = 125;
  .google.protobuf.StringValue review_id = 126;
  .google.protobuf.StringValue card_id = 127;
  .google.protobuf.StringValue featured_item_ids = 128;
  .google.protobuf.BoolValue is_sponsored = 129;
  .google.protobuf.StringValue address_id = 130;
  .google.protobuf.StringValue is_dashpass = 131;
  .google.protobuf.StringValue filters_applied = 132;
  .google.protobuf.StringValue pickup_map_source = 133;
  .google.protobuf.BoolValue pickup_popular_flag = 134;
  .google.protobuf.StringValue pickup_store_type = 135;
  .google.protobuf.BoolValue pickup_deal_flag = 136;
  .google.protobuf.StringValue collection_id = 137;
  .google.protobuf.StringValue bundle_name = 138;
  .google.protobuf.Int64Value bundle_size = 139;
  .google.protobuf.StringValue store_ids = 140;
  .google.protobuf.StringValue list_filters = 141;
  .google.protobuf.Int64Value item_position = 142;
  .google.protobuf.StringValue photo_url = 143;
  .google.protobuf.BoolValue is_store_name_hidden = 144;
  .google.protobuf.StringValue is_rewrite = 145;
  .google.protobuf.Int64Value available_count = 146;
  .google.protobuf.StringValue eta = 147;
  .google.protobuf.StringValue eta_icon = 148;
  .google.protobuf.StringValue item_list = 149;
  .google.protobuf.StringValue store_list = 150;
  .google.protobuf.StringValue item_image_url = 151;
  .google.protobuf.StringValue item_card_position = 152;
  .google.protobuf.StringValue timezone = 153;
  .google.protobuf.StringValue store_card_position = 154;
  .google.protobuf.BoolValue is_from_search = 155;
  .google.protobuf.StringValue page1 = 156;
  .google.protobuf.StringValue action_url = 157;
  .google.protobuf.StringValue img_url = 158;
  .google.protobuf.BoolValue is_cross_vertical = 159;
  .google.protobuf.StringValue vertical_name = 160;
  .google.protobuf.StringValue vertical_id = 161;
  .google.protobuf.StringValue content_id = 162;
  .google.protobuf.StringValue event_type = 163;
  .google.protobuf.StringValue image_url = 164;
  .google.protobuf.StringValue placement = 165;
  .google.protobuf.Int64Value menu_cotnt = 166;
  .google.protobuf.StringValue fulfillment_type = 167;
  .google.protobuf.StringValue pickup_eta_icon = 168;
  .google.protobuf.StringValue pickup_eta = 169;
  .google.protobuf.StringValue dd_delivery_correlation_id = 170;
  .google.protobuf.StringValue max_views = 171;
  .google.protobuf.StringValue x_goog_maps_experience_id = 172;
  .google.protobuf.StringValue store_distance_in_miles = 173;
  .google.protobuf.StringValue carousel_id = 174;
  .google.protobuf.StringValue store_distance = 175;
  .google.protobuf.StringValue display_travel_time = 176;
  .google.protobuf.StringValue modality_icon = 177;
  .google.protobuf.StringValue travel_time_in_minutes = 178;
  .google.protobuf.StringValue header_image_url = 180;
  .google.protobuf.StringValue first_popular_item_image_url = 181;
  .google.protobuf.StringValue raw_query = 182;
  .google.protobuf.StringValue savelist_store_link_ids = 183;
  .google.protobuf.BoolValue is_hybrid_search = 184;
  .google.protobuf.StringValue ad_group_id = 185;
  .google.protobuf.StringValue auction_id = 186;
  .google.protobuf.StringValue promo_code = 187;
  .google.protobuf.StringValue submarket_id = 188;
  .google.protobuf.StringValue items = 189;
  .google.protobuf.StringValue ad_auction_id = 190;
  .google.protobuf.StringValue is_listings = 191;
  .google.protobuf.StringValue is_dashpass_exclusive = 192;
  .google.protobuf.StringValue filter_list = 193;
  .google.protobuf.StringValue item_collection_type = 194;
  .google.protobuf.StringValue delivery_fee_amount = 195;
  .google.protobuf.StringValue business_id = 196;
  .google.protobuf.StringValue asap_available = 197;
  .google.protobuf.StringValue tile_store_ids = 198;
  .google.protobuf.Timestamp next_open_time = 199;
  .google.protobuf.StringValue store_longitude = 200;
  .google.protobuf.StringValue store_prediction_score = 201;
  .google.protobuf.StringValue price_range = 202;
  .google.protobuf.StringValue minimum_subtotal_amount = 203;
  .google.protobuf.Timestamp next_close_time = 204;
  .google.protobuf.StringValue store_latitude = 205;
  .google.protobuf.StringValue has_offer_badges = 206;
  .google.protobuf.StringValue item_score = 207;
  .google.protobuf.StringValue sibling_store_id = 208;
  .google.protobuf.StringValue attr_src = 209;
  .google.protobuf.StringValue item_collection_name = 210;
  .google.protobuf.StringValue collection_size = 211;
  .google.protobuf.StringValue item_collection_position = 212;
  .google.protobuf.StringValue item_collection_id = 213;
  .google.protobuf.StringValue item_is_retail = 214;
  .google.protobuf.StringValue l2_category_name = 215;
  .google.protobuf.StringValue l1_category_name = 216;
  .google.protobuf.StringValue l2_category_id = 217;
  .google.protobuf.StringValue l1_category_id = 218;
  .google.protobuf.StringValue autocomplete_term = 219;
  .google.protobuf.BoolValue is_autocomplete_result = 220;
  .google.protobuf.StringValue is_delivery_available = 221;
  .google.protobuf.StringValue delivery_eta = 222;
  .google.protobuf.StringValue is_pickup_available = 223;
  .google.protobuf.StringValue pickup_callout = 224;
  .google.protobuf.BoolValue is_precheckout_bundle = 225;
  .google.protobuf.BoolValue weighted_item = 226;
  .google.protobuf.StringValue item_category_id = 227;
  .google.protobuf.StringValue description = 228;
  .google.protobuf.StringValue l2_item_category_id = 229;
  .google.protobuf.StringValue delivery_callout = 230;
  .google.protobuf.StringValue type = 231;
}
